--- a/Exercise Files/Ch01/01_04/package.json
+++ b/Exercise Files/Ch01/01_04/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "devDependencies": {
     "grunt": "^1.0.3",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.0.2"
   }
 }
